[package]
name = "clipboard-rs"
version = "0.1.0"
authors = ["ChurchTao <swkzymlyy@gmail.com>"]
description = "Cross-platform clipboard API (text | image | rich text | html | monitoring changes) | 跨平台剪贴板 API(文本|图片|富文本|html|监听变化) Windows,MacOS,Linux"
repository = "https://github.com/ChurchTao/clipboard-rs"
documentation = "https://docs.rs/clipboard-rs"
license = "MIT"
readme = "README.md"
keywords = ["clipboard"]
edition = "2021"
rust-version = "1.70.0"

[dependencies]
image = "0.24"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5.0.0"
windows-win = "3.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"

[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="ios", target_os="emscripten"))))'.dependencies]
x11rb = { version = "0.13.0", features = ["xfixes"] }
