[package]
name = "clipboard-rs"
version = "0.1.5"
authors = ["ChurchTao <swkzymlyy@gmail.com>"]
description = "Cross-platform clipboard API (text | image | rich text | html | files | monitoring changes) | 跨平台剪贴板 API(文本|图片|富文本|html|文件|监听变化) Windows,MacOS,Linux"
repository = "https://github.com/ChurchTao/clipboard-rs"
documentation = "https://docs.rs/clipboard-rs"
license = "MIT"
readme = "README.md"
keywords = ["clipboard"]
edition = "2021"
rust-version = "1.63.0"

[dependencies]
image = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = { version = "5.3.0", features = ["monitor"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"

[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="ios", target_os="emscripten"))))'.dependencies]
x11rb = { version = "0.13.0", features = ["xfixes"] }
