[package]
name = "clipboard-rs"
version = "0.2.3"
authors = ["ChurchTao <swkzymlyy@gmail.com>"]
description = "Cross-platform clipboard API (text | image | rich text | html | files | monitoring changes) | 跨平台剪贴板 API(文本|图片|富文本|html|文件|监听变化) Windows,MacOS,Linux"
repository = "https://github.com/ChurchTao/clipboard-rs"
documentation = "https://docs.rs/clipboard-rs"
license = "MIT"
readme = "README.md"
keywords = ["clipboard"]
edition = "2021"
rust-version = "1.67.0"

[dependencies]
image = { version = "0.25.5", default-features = false, features = [
    "png",
    "jpeg",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Memory",
    "Win32_System_DataExchange"
] }
clipboard-win = { version = "5.4.0", features = ["monitor"] }
image = { version = "0.25.5", default-features = false, features = [
    "bmp",
    "png",
    "jpeg",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# cocoa = "0.26.0"
objc2 = { version = "0.6.0" }
objc2-foundation = { version = "0.3.0", features = [
    "NSArray",
    "NSString",
    "NSEnumerator",
] }
objc2-app-kit = { version = "0.3.0", features = [
    "NSPasteboard",
    "NSPasteboardItem",
    "NSImage",
] }
image = { version = "0.25.5", default-features = false, features = [
    "tiff",
    "png",
    "jpeg",
] }


[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="ios", target_os="emscripten"))))'.dependencies]
x11rb = { version = "0.13.0", features = ["xfixes"] }
